<resources>
    <string name="app_name">LettuceApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_article">Article</string>
    <string name="menu_learning">Learning</string>
    <string name="menu_material">Material</string>
    <string name="menu_user">User</string>
    <string name="menu_statistics">Statistics</string>
    <string name="menu_level">Difficulty</string>
    <string name="menu_quiz">Quiz</string>
    <string name="menu_result">Result</string>
    <string name="card_js">JavaScript</string>
    <string name="card_js_desc">Empower you with the skills to design client-side and platform-independent solutions</string>
    <string name="card_chemistry">Chemistry</string>
    <string name="card_chemistry_desc">Offers a rigorous, foundational treatment of atoms and molecules.</string>
    <string name="card_acct">Accouting</string>
    <string name="card_acct_desc">Focuses on the process of auditing financial statements</string>
    <string name="card_video">Video</string>
    <string name="card_quiz">Quiz</string>
    <string name="card_notes">Notes</string>
    <string name="difficulty">Select quiz level</string>
    <string name="video_desc">Various video</string>
    <string name="quiz_desc">Form of games</string>
    <string name="notes_desc">Documentation</string>
    <string name="easy_level">Beginner</string>
    <string name="normal_level">Intermediate</string>
    <string name="hard_level">Professional</string>
    <string name="difficulty_level">Difficulty:</string>
    <string name="next_ques">Skip</string>
    <string name="quiz_result">Quiz Result</string>
    <string name="complete_msg">You have completed the quiz</string>
    <string name="quiz_course">Course:</string>
    <string name="quiz_date_taken">Date conducted:</string>
    <string name="quiz_level">Level:</string>
    <string name="quiz_correctQues">Correct Question:</string>
    <string name="quiz_wrongQues">Wrong Question:</string>
    <string name="quiz_totalQues">Total Question:</string>
    <string name="quiz_mark">Mark:</string>
    <string name="quiz_passOrFail">Result:</string>
    <string name="btn_redo">Retake</string>
    <string name="quiz_skipQues">Skip Question:</string>
    <string name="quiz_userName">User Name:</string>
    <string name="video">Videos</string>
    <string name="js_videoTitle1">Learn JAVASCRIPT in just 5 MINUTES (2020)</string>
    <string name="js_videoTitle2">Learn JAVASCRIPT in 5 MINUTES->JavaScript Tutorial for Beginner</string>
    <string name="js_videoTitle3">Learn to Code in 5 Minutes - HTML, CSS, and Javascript Tutorial</string>
    <string name="js_videoTitle4">Coding "Snake" in 4 min 30 sec (plain browser JavaScript)</string>
    <string name="js_videoTitle5">Simple JavaScript Slideshow In 5 Minutes</string>
    <string name="chem_videoTitle1">Chemistry explained in 5 minutes</string>
    <string name="chem_videoTitle2">Chemistry SPM: Learn 6.6 Standard Solution In 5 Minutes</string>
    <string name="chem_videoTitle3">Chemistry Fundamentals in 6 Minutes</string>
    <string name="chem_videoTitle4">Form 5 KSSM Chemistry IUPAC Naming Guide in 6 minutes</string>
    <string name="chem_videoTitle5">IGCSE CHEMISTRY REVISION [Syllabus 3 part 1] - Atomic Structure</string>
    <string name="acct_videoTitle1">5 Tips for Studying Accounting</string>
    <string name="acct_videoTitle2">Learn the Accounting Equation in 5 Minutes (The Easy Way)</string>
    <string name="acct_videoTitle3">Accounting for Beginner #1</string>
    <string name="acct_videoTitle4">Accounting 101: Learn Basic Accounting in 7 Minutes!</string>
    <string name="acct_videoTitle5">Understand the Basic of Accounting in 5 minutes | Filipino</string>
    <string name="easy_level_desc">- 10 question\n- 3 answer each question</string>
    <string name="normal_level_desc">- 20 question\n- 3/4 answer each question</string>
    <string name="hard_level_desc">- 30 question\n- 4 answer each question</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="disp_video">Show Video</string>
    <string name="article_default_date_updated">Date updated</string>
    <string name="article_default_title">Article title</string>
    <string name="article_default_author">Author</string>
    <string name="article_default_summary">Summary</string>
    <string name="title_activity_article_web_view">Article</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="back_home">Back to home</string>
    <string name="submit">Submit</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="article_load_failed">Failed to load article\nDue to no internet connection\nKindly check if you are connected</string>
    <string name="check_connection">Check connection</string>
    <string name="survey_label">Survey</string>
    <string name="article_no_result">The article list is empty</string>
    <string name="question_label">Question</string>
    <string name="survey_strong_disagree">Strongly disagree</string>
    <string name="survey_strong_agree">Strongly agree</string>
    <string name="survey_answer_required">answer is required</string>
    <string name="survey_submitted">Survey response had been recorded.</string>
    <string name="survey_recorded_redundancy">You had responded to the survey. </string>
    <string name="survey_submitted_header">Survey had been recorded</string>
    <string name="survey_submitted_appr">Thank you, your value response helps us \nto develop better environment for education</string>
    <string name="survey_start">We\'re conducting research on the critical issue proposed by United Nation, which is one of the 17 Sustainable Development Goals for quality education. This will help us to collect data for facilitate improvements for educational quality among different areas and proposed with solution by authorities. The survey should only take 15 minutes, and your responses are completely anonymous.</string>
    <string name="survey_start_line_1">You can only take the survey once. Questions marked with an asterisk (*) are required.</string>
    <string name="survey_start_line_2">If you have any questions about the survey, please email us: <u>support@lettuceapp.com.my</u></string>
    <string name="survey_start_line_3">We really appreciate your input!</string>
    <string name="begin">Begin</string>
    <string name="reference_start">"Credit to the research team on providing questionnaire at "</string>
    <string name="reference_link">here</string>
    <string name="email">support@lettuceapp.com.my</string>
    <string name="survey_support_subject">Enquiry on Survey related issue</string>
    <string name="survey_section_instruction">Please indicate your level of agreement with the statements below. Please choose the one most appropriate response to each question.</string>
    <string name="survey_section_one">Section 1</string>
    <string name="survey_section_one_name">Self-managed learning</string>
    <string name="survey_section_two">Section 2</string>
    <string name="survey_section_two_name">Computer literacy</string>
    <string name="survey_section_three">Section 3</string>
    <string name="survey_section_three_name">Cooperative learning</string>
    <string name="survey_required_alert_title">Argggh unfortunately this is compulsory to choose</string>
    <string name="survey_required_alert_message">Question %s at Section %s is required to answer</string>
    <string name="survey_required_alert_positive">Bring me there</string>
    <string name="assessment_date_default">Date</string>
    <string name="assessment_title_default">Title</string>
    <string name="assessment_description_default">Description</string>
    <string name="assessment_duration_default">000</string>
    <string name="assessment_duration_unit_default">mins</string>
    <string name="assessment_question_default">0</string>
    <string name="assessment_duration_label">Duration</string>
    <string name="assessment_question_label">Question</string>
    <string name="assessment_take_test_label">Take Test</string>
    <string name="assessment_section_one_name">Active</string>
    <string name="assessment_section_two_name">Upcoming</string>
    <string name="assessment_section_three_name">Completed</string>
    <string name="assessment_label">Assessment</string>
    <string name="assessment_upcoming_alert">Upcoming event</string>
    <string name="assessment_upcoming_alert_desc">Assessment \"%s\" will active in %d day(s)</string>
    <string name="assessment_empty_active">There has no active assessment at the moment.</string>
    <string name="assessment_empty_upcoming">There has no upcoming assessment at the moment.</string>
    <string name="assessment_empty_completed">Have you completed any assessment? \nHow about took one now?</string>
    <string name="assessment_completed">Completed assessment</string>
    <string name="assessment_instruction">Instruction</string>
    <string name="assessment_question_level_title"><u>QUESTION LEVEL</u></string>
    <string name="assessment_question_level_description">Students at Proficiency Level 4 can work effectively with explicit models for complex, concrete situations that might involve constraints or call for making assumptions. They can select and integrate different representations, including symbolic ones, linking them directly to aspects of real-world situations. Students at this level can use well-developed skills and reason flexibly, with some insight, in these contexts. They can construct and communicate explanations and arguments based on their interpretations, arguments and actions.</string>
    <string name="connection_error">You are disconnected to internet\n<u>Check connection</u></string>
    <string name="assessment_begin">Start Taking Test</string>
    <string name="assessment_no_description">No additional description to this assessment</string>
    <string name="pause_cap">PAUSE</string>
    <string name="assessment_time_elapsed_label">Time elapsed</string>
    <string name="skip">Skip</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="submit2">Submit</string>
    <string name="logo">Logo</string>
    <string name="login">Login</string>
    <string name="loginRegister">Still doesn\'t have a account yet?\nCreate an account here</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="textViewRegisterLogin">already have an account? Login Here</string>
    <string name="login_here">login here</string>
    <string name="firstname">FirstName</string>
    <string name="lastname">LastName</string>
    <string name="register">register</string>
    <string name="login_email_tip">Email</string>
    <string name="register_confirm_password">Confirm password</string>
    <string name="register_dob">Date of Birth (Day/Month/Year)</string>
    <string-array name="register_status">
        <item>Select an option for your current status</item>
        <item>Student</item>
        <item>Unemployed</item>
        <item>Employed</item>
    </string-array>
</resources>