<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/articleFragment"
            android:icon="@drawable/ic_baseline_article_24"
            android:title="@string/menu_article" />
        <item
            android:id="@+id/learningFragment"
            android:icon="@drawable/ic_baseline_school_24"
            android:title="@string/menu_learning" />
        <item
            android:id="@+id/statisticsFragment"
            android:icon="@drawable/ic_baseline_pie_chart_outline_24"
            android:title="@string/menu_statistics" />
        <item
            android:id="@+id/surveyFragment2"
            android:icon="@drawable/ic_baseline_list_alt_24"
            android:title="@string/survey_label" />
        <item
            android:id="@+id/userFragment"
            android:icon="@drawable/ic_baseline_account_circle_24"
            android:title="@string/menu_user" />
    </group>
</menu>