<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/articleFragment">

    <fragment
        android:id="@+id/articleFragment"
        android:name="com.example.lettuceapp.ui.article.ArticleFragment"
        android:label="@string/menu_article"
        tools:layout="@layout/fragment_article" >
        <action
            android:id="@+id/action_articleFragment_to_learningFragment"
            app:destination="@id/learningFragment"
            app:popUpTo="@id/articleFragment" />
    </fragment>

    <fragment
        android:id="@+id/learningFragment"
        android:name="com.example.lettuceapp.ui.learning.LearningFragment"
        android:label="@string/menu_learning"
        tools:layout="@layout/fragment_learning" >
        <action
            android:id="@+id/action_learningFragment_to_materialFragment"
            app:destination="@id/materialFragment"
            app:popUpTo="@id/learningFragment" />
    </fragment>

    <fragment
        android:id="@+id/userFragment"
        android:name="com.example.lettuceapp.ui.user.UserFragment"
        android:label="@string/menu_user"
        tools:layout="@layout/fragment_user" />
    <fragment
        android:id="@+id/statisticsFragment"
        android:name="com.example.lettuceapp.ui.statistics.StatisticsFragment"
        android:label="@string/menu_statistics"
        tools:layout="@layout/fragment_statistics" />
    <fragment
        android:id="@+id/materialFragment"
        android:name="com.example.lettuceapp.ui.learning.MaterialFragment"
        android:label="@string/menu_material"
        tools:layout="@layout/fragment_material" >
        <action
            android:id="@+id/action_materialFragment_to_difficultyFragment"
            app:destination="@id/difficultyFragment"
            app:popUpTo="@id/materialFragment" />
    </fragment>
    <fragment
        android:id="@+id/difficultyFragment"
        android:name="com.example.lettuceapp.ui.learning.DifficultyFragment"
        android:label="@string/menu_level"
        tools:layout="@layout/fragment_difficulty" />
    <fragment
        android:id="@+id/surveyFragment2"
        android:name="com.example.lettuceapp.ui.survey.SurveyFragment"
        android:label="@string/survey_label"
        tools:layout="@layout/fragment_survey" />
</navigation>